# libmath

./: .gitignore  Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  src-files.js
l2math/: Cargo.toml  all.html  constant.E.html  constant.EF.html  constant.EGAMMA.html  constant.EGAMMAF.html  constant.FRAC_1_PI.html  constant.FRAC_1_PIF.html  constant.FRAC_1_SQRT_2.html  constant.FRAC_1_SQRT_2F.html  constant.FRAC_1_SQRT_3.html  constant.FRAC_1_SQRT_3F.html  constant.FRAC_1_SQRT_PI.html  constant.FRAC_1_SQRT_PIF.html  constant.FRAC_2_PI.html  constant.FRAC_2_PIF.html  constant.FRAC_2_SQRT_PI.html  constant.FRAC_2_SQRT_PIF.html  constant.FRAC_PI_2.html  constant.FRAC_PI_2F.html  constant.FRAC_PI_3.html  constant.FRAC_PI_3F.html  constant.FRAC_PI_4.html  constant.FRAC_PI_4F.html  constant.FRAC_PI_6.html  constant.FRAC_PI_6F.html  constant.FRAC_PI_8.html  constant.FRAC_PI_8F.html  constant.LN_10.html  constant.LN_10F.html  constant.LN_2.html  constant.LN_2F.html  constant.LOG10_2.html  constant.LOG10_2F.html  constant.LOG10_E.html  constant.LOG10_EF.html  constant.LOG2_10.html  constant.LOG2_10F.html  constant.LOG2_E.html  constant.LOG2_EF.html  (+138 more)
libtrig/: all.html  index.html  lib.rs  macro.prelude.html  sidebar-items.js  struct.Angle2D.html  struct.Coord2D.html  struct.Pos2D.html  struct.Vec2D.html  struct.Vec3D.html  struct.u2.html  struct.u3.html  type.Degree32.html  type.Degree64.html  type.Float32.html  type.Float64.html  type.Int.html  type.Radian32.html  (+3 more)
macros/: Cargo.toml  ffi.rs  func_mod.rs  lib.rs
macros/mass_impl/: variants.rs
(+387 files in other folders)
